# school-management-system

./: README.md
frontend/: .env.development  .env.production  README.md  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: main.ts  types.ts
frontend/src/assets/: main.css
frontend/src/components/layouts/: Layouts.vue
frontend/src/composables/: useApiFetch.ts
frontend/src/router/: index.ts
frontend/src/stores/: authTokenStore.ts
frontend/src/views/: HomeView.vue
frontend/src/views/errors/: NotFound.vue
server/: .env.example  .gitignore  Cargo.toml  Rocket.toml
server/migrations/2024-11-29-081619_users/: up.sql
server/migrations/2024-12-06-070854_posts/: up.sql
server/src/: clerk.rs  config.rs  cors.rs  database.rs  main.rs  models.rs  schema.rs
server/src/routes/: frontend.rs  mod.rs  posts.rs  test.rs  users.rs
