[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
clerk-rs = { version = "0.4.0", features = ["rocket"] }
diesel = { version = "2.2.5", features = ["r2d2", "sqlite"] }
dotenvy = "0.15.7"
jwks = "0.1.3"
reqwest = "0.12.9"
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.215"
